# petsc-pkg-sowing

./: .cvsignore  .cvswrappers  Makefile.in  Makerules.in  README  RELEASE_NOTES  ToDo  acconfigl.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.in  makeconfigure
docs/: .cvsignore  Makefile  Makefile.in  bfort.tex  install.tex  tohtml.tex  urlsimple.sty
docs/bfort/: Makefile.in  bfort.tex
docs/doctext/: .cvsignore  Makefile  Makefile.in  Swap.3  Swap.tex  addtensf.sty  docdef.tex  doctext.tex  refman2.def  refman2.sty  swap.eps  swap.man  swap.txt  swap2.eps  tools.bib  tpage.sty
docs/install/: Makefile.in  install.tex  sowingsite.html
docs/texlocal/: code.sty  linfoem.cls  tpage.sty
docs/tohtml/: Makefile.in  tohtml.tex
include/: .cvsignore  daytime.h  getopts.h  patchlevel.h.in  protofix.h  rdconfig.h  sowing.h  sowingconfig.h.in  sowingfile.h  sowingtxt.h  trspace.h
include/textfilt/: .cvsignore  cmdline.h  errhand.h  instream.h  inutil.h  maptok.h  outstream.h  srlist.h  textout.h  textpath.h  textpath.h.in  tfile.h  tfilter.h
maint/: fixcase  getguess  maketar  porttest  runtests  testbuild
man/man1/: bfort.1  doc2lt.1  doctext.1  tohtml.1
notes/: caches.txt
share/: basedefs.txt  html.def  latex.def  nroff.def  refman.sty
share/doctext/: html.def  latex.def  nroff.def
src/: Makefile.in
src/bfort/: .cvsignore  Makefile.in  bfort.c  bfort2.c  bfort2.h  bfortmod.c  doc.c  doc.h
src/bfort/testing/: .cvsignore  Makefile.in  f1.c  f1a.c  f1af.c  f1f.c  leftover.c  lftcomm.c  lftslv.c  n1.c  n1f.c  n2.c  n2f.c  n2fbase.c  snesf.c  statehf.c  svctxhf.c  tstc.c  tstpgm.c  tstpgma.c  tstpgma2.c  tstpgmaf90base.f90  tstpgmafbase.c  tstpgmb.c  tstpgmf.c  tstpgmhf.c
src/bfort/testing/testref/: n1f.c  n2f.c  tst2cf.c  tst3cf.c  tstcf.c  tstpgma2f.c  tstpgmaf.c  tstpgmaf90.f90  tstpgmbf.c  tstpgmbf90.f90
src/bfort/testing2/: Makefile.in  README  handledef.f90  malform.c  tbase.c  tchar.c  tcharinc  thandle.c  thead.h  tmpi.c  tmpiinc  tpetsc.c  tret.c
src/bfort/testing2/testref/: tbasef.c  tbasef2.c  tbasef3.c  tbasef4.c  tcharf.c  tcharf2.c  thandle.f90  thandlef.c  theadhf.c  tmpif.c  tpetsc.f90  tpetscf.c  tretf.c
src/bfort/testing2/testref-old/: tbasef.c  tbasef2.c  tbasef3.c  tbasef4.c  tcharf.c  tcharf2.c  thandle.f90  thandlef.c  theadhf.c  tmpif.c  tpetsc.f90  tpetscf.c  tretf.c
src/bib2html/: .cvsignore  Makefile.in  g.cfg  g.txt  tin.bib  tout-base.htm  tout-bib-base.htm
src/doctext/: .cvsignore  Makefile.in  README  doc.h  doc2lt.cc  docfields.cc  docpath.h.in  doctext.cc  docutil.cc  docutil.h  dotfmat.cc  dotfmt.h  incfiles.cc  incfiles.h  keyword.cc  keyword.h  quotefmt.cc  quotefmt.h  textb.cc  todo
src/doctext/test/: .cvsignore  Makefile.in  Makefile.mm  allfmt.c  c.h  eopindex.def  es.cit  estest.h  f1.cit  fff  fhtml.def  file.cit  foo.c  indent-html.def  indent-latex.def  indent-man.def  mesh.c  oldst.c  pubinc  tdollar.h  test.nam  tst.cit  tst.f  tst1.c  tst2.c  tst3.c  tstcnst.c  tstpgm.c  tstpgm.h  tstpgmb.c  tstpgmc.c  tststra.h  vinv.c
src/doctext/test/defn/: html.def
src/doctext/test/testref/: File_t.3  File_t.html  Name.2  Name.3  Name.html  Name.md  Name.tex  Name2.2  Name2.3  Name2.html  Name2.md  Name2.tex  Norm_t.3  Norm_t.html  Read_t.3  Read_t.html  Routine.2  Routine.3  Routine.html  Routine.md  Routine.tex  SYGetArchType.2  SYGetArchType.3  SYGetArchType.html  SYGetArchType.md  SYGetArchType.tex  Tst2_start.2  Tst2_start.3  Tst2_start.html  Tst2_start.md  Tst2_start.tex  UsingFortran.html  Write_t.3  Write_t.html  argtest1.md  es.cit  exported.3  f.html  f.tex  f1.cit  (+54 more)
src/findlibs/: findftnlibs  findlibs
src/mapnames/: .cvsignore  Makefile.in  map1.cit  mapnames.cc  test1
src/mapnames/test/: test1.html  test1.pmap  test1.tex  test1nc.html  test1nc.tex
src/sys/: Makefile.in  arch.c  daytime.c  file.c  getopts.c  rdconfig.c  tr.c  txt.c
src/sys/testing/: Makefile  Makefile.in  conf  rdconftest.c
src/textfilt/: Makefile.in  cmdline.cc  errhand.cc  file.cc  instream.cc  inutil.cc  maptok.cc  outstream.cc  search.cc  texthtml.cc  textmyst.cc  textnroff.cc  textout.cc  texttex.cc
src/tohtml/: .cvsignore  Makefile.in  README  accent.c  anlhtext.sty  biblio.c  dimen.c  end.page  environ.c  label.c  latexinfo.c  math.c  rdaux.c  rddefs.c  rdindx.c  rdinfo.c  refmap.c  scan.c  scanc.stk  search.c  search.h  simpleif.c  style.c  tabular.c  tex.h  tex2html.c  tex2win.c  texactio.c  tohtml.c  tohtmlpath.h  tohtmlpath.h.in  tortf.c  txt.c  userdef.c  xwdsize.c
src/tohtml/testing/: .cvsignore  Makefile.in  README  chameleo.ps  sles.tex  talkprob.tex  test1.tex  test10.cit  test10.tex  test11.tex  test12.tex  test13.tex  test14.tex  test15.tex  test16.tex  test17.tex  test18.tex  test19.tex  test2.tex  test20.tex  test21.tex  test22.tex  test23.tex  test24.tex  test25.tex  test26.tex  test27.tex  test28.tex  test29.tex  test3.tex  test4.tex  test5.cit  test5.tex  test5m.cit  test6.tex  test7.tex  test8.tex  test9.tex  user.defs
src/tohtml/testing/testref/: test1.html  test10.html  test11.html  test12.html  test13.html  test14.html  test15.html  test16.html  test17.html  test18.html  test2.html  test25.html  test26.html  test27.html  test28.html  test29.html  test3.html  test4.html  test6.html  test7.html  test7a.html  test8.html  test9.html
src/tohtml/testing/testref/test1/: img1.xbm  img3.xbm  img4.xbm  node1.html  test1.html
src/tohtml/testing/testref/test2/: node1.html  test2.html
src/tohtml/testing/testref/test20/: test20.html
src/tohtml/testing/testref/test3/: node1.html  test3.html
src/tohtml/testing/testref/test4/: img1.xbm  node1.html  node2.html  node3.html  node4.html  node5.html  node6.html  test4.html
src/tohtml/testing/testref/test6/: img0.xbm  img2.xbm  img3.xbm  node1.html  test6.html
src/tohtml/testing/testref/test7/: img0.xbm  node1.html  test7.html
www/: .cvsignore
